# pytorch-cv-cookiecutter

./: .gitignore  CONTRIBUTING.md  README.md  cookiecutter.json  install.sh  run_template.sh
hooks/: README.md  logo.txt  post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  env.example  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/configs/: deployment.yaml  tracking.yaml  training.yaml
{{cookiecutter.project_slug}}/docker/: .dockerignore  Dockerfile  Dockerfile.cpu  apt-packages.txt  build.sh  run.sh  scan.sh
{{cookiecutter.project_slug}}/docs/: API.md  DEVELOPMENT.md  GETTING_STARTED.md  QUICK_REFERENCE.md  TRAINING.md  TROUBLESHOOTING.md  docker.md  dvc.md  index.md  mlflow.md  remote_repo.md
{{cookiecutter.project_slug}}/mlflow/: docker-compose.yml
{{cookiecutter.project_slug}}/requirements/: deploy.txt  dev.txt
{{cookiecutter.project_slug}}/science/models/: .gitignore
{{cookiecutter.project_slug}}/science/notebooks/: README.md
{{cookiecutter.project_slug}}/science/notebooks/experiments/: 01_model_experiment.ipynb
{{cookiecutter.project_slug}}/science/notebooks/exploration/: 01_data_exploration.ipynb
{{cookiecutter.project_slug}}/science/notebooks/visualization/: 01_results_visualization.ipynb
{{cookiecutter.project_slug}}/scripts/: export.py  serve.py  train.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package}}/deployment/: service.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package}}/training/: experiment.py
{{cookiecutter.project_slug}}/tests/: test_imports.py
{{cookiecutter.project_slug}}/{{cookiecutter.python_package}}/: __init__.py  vision.py
{{cookiecutter.project_slug}}/{{cookiecutter.python_package}}/utils/: __init__.py  checkpointing.py
